# omop_schema

./: .buildinfo  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/src/: index.doctree
.doctrees/autoapi/src/omop_schema/: index.doctree
.doctrees/autoapi/src/omop_schema/convert/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/base/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/v4/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/v5_0/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/v5_3/: index.doctree
.doctrees/autoapi/src/omop_schema/schema/v5_4/: index.doctree
.doctrees/autoapi/src/omop_schema/utils/: index.doctree
.doctrees/autoapi/src/omop_schema/validate/: index.doctree
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  deploy.yaml  tests.yaml
_modules/: index.html
_modules/src/omop_schema/: convert.html  utils.html  validate.html
_modules/src/omop_schema/schema/: base.html  v4.html  v5_0.html  v5_3.html  v5_4.html
_sources/autoapi/src/: index.rst.txt
_sources/autoapi/src/omop_schema/: index.rst.txt
_sources/autoapi/src/omop_schema/schema/base/: index.rst.txt
_sources/autoapi/src/omop_schema/schema/v5_3/: index.rst.txt
_sources/autoapi/src/omop_schema/schema/v5_4/: index.rst.txt
autoapi/: index.html
autoapi/src/: index.html
autoapi/src/omop_schema/: index.html
autoapi/src/omop_schema/convert/: index.html
autoapi/src/omop_schema/schema/: index.html
autoapi/src/omop_schema/schema/base/: index.html
autoapi/src/omop_schema/schema/v4/: index.html
autoapi/src/omop_schema/schema/v5_0/: index.html
autoapi/src/omop_schema/schema/v5_3/: index.html
autoapi/src/omop_schema/schema/v5_4/: index.html
autoapi/src/omop_schema/utils/: index.html
autoapi/src/omop_schema/validate/: index.html
docs/: index.md
docs/source/: conf.py  index.rst
search/: search_index.json
sphinx/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_modules/: index.html
sphinx/_modules/src/omop_schema/: convert.html  utils.html  validate.html
sphinx/_modules/src/omop_schema/schema/: base.html  v4.html  v5_0.html  v5_3.html  v5_4.html
sphinx/_sources/: index.rst.txt
sphinx/autoapi/: index.html
sphinx/autoapi/src/omop_schema/: index.html
sphinx/autoapi/src/omop_schema/convert/: index.html
sphinx/autoapi/src/omop_schema/schema/: index.html
sphinx/autoapi/src/omop_schema/utils/: index.html
sphinx/autoapi/src/omop_schema/validate/: index.html
sphinx/source/: conf.py  index.rst
src/omop_schema/: base.py  convert.py  utils.py  validate.py
src/omop_schema/schema/: base.py  v4.py  v5_0.py  v5_3.py  v5_4.py
tests/: test_convert.py  test_loading.py  test_validate.py  validator.py
(+11 files in other folders)
