[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OMOP-MEDS"
dynamic = ["version"]
authors = [
    { name="Robin van de Water", email="robin.vandewater@hpi.de"},
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "An ETL to convert OMOP data to the MEDS format."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyarrow", "polars"
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov"]
local_parallelism = ["hydra-joblib-launcher"]
slurm_parallelism = ["hydra-submitit-launcher"]

[project.scripts]
MEDS_extract-OMOP = "OMOP_MEDS.__main__:main"
OMOP_MEDS = "OMOP_MEDS.__main__:main"


[project.urls]
Homepage = "https://github.com/rvandewater/OMOP_MEDS"
Issues = "https://github.com/rvandewater/OMOP_MEDS/issues"
