[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omop_schema"
dynamic = ["version"]
authors = [
    { name="Robin van de Water", email="robin.vandewater@hpi.de"},
]
description = "A package to read in and convert OMOP data to the right schema."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyarrow", "rich"
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov"]
polars = ["polars>=0.16.0"]
pandas = ["pandas>=1.3.0"]

[project.urls]
Homepage = "https://github.com/rvandewater/omop_schema"
Issues = "https://github.com/rvandewater/omop_schema/issues"
